# Ordis-legacy

./: .editorconfig  .env.sample  .gitignore  .pdm-python  .pre-commit-config.yaml  Pipfile  README.md  dev.docker-compose.yml  docker-compose.yml  prod.docker-compose.yml  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  status_embed.yml
api/: .pdm-python  Dockerfile  README.md  alembic.ini  pyproject.toml
api/app/: __main__.py  gunicorn_runner.py  logging.py  run.py  settings.py
api/app/database/: dependencies.py  utils.py
api/app/database/models/: command_metric.py  deep_rock_galactic.py  link_map.py  pin.py  trusted.py  warframe.py  web_map.py
api/app/routers/: __init__.py  application.py  lifetime.py
api/app/routers/trusted/: router.py  schemas.py
api/app/routers/warframe/: __init__.py
api/app/routers/warframe/items/: router.py  schemas.py
api/app/tests/: conftest.py
api/app/tests/routers/: test_healthcheck.py
api/migrations/: env.py
api/migrations/versions/: 1700367773-65a3c633b228_created_base_tables.py  1700458463-f0ec577b6798_created_base_tables.py
bot/: .pdm-python  Dockerfile  __init__.py  __main__.py  bot.py  dev.Dockerfile  pyproject.toml
bot/bot/: __init__.py  __main__.py  api.py  bot.py  constants.py  context.py
bot/bot/extensions/core/: administration.py  error_handler.py  extensions.py  trusted.py
bot/bot/extensions/info/: links.py  ping.py
bot/bot/extensions/warframe/: earth.py  market.py  orbits.py
bot/bot/extensions/warframe/_ui/: messaging.py  sorting.py
bot/bot/extensions/warframe/market/: market.py
bot/bot/extensions/warframe/market/_ui/: __init__.py  messaging.py
bot/bot/extensions/warframe/orbits/: earth.py
bot/bot/models/: __init__.py  warframe_market.py
bot/bot/resources/: quotes.yaml
bot/bot/utils/: __init__.py  checks.py  context.py  converters.py  decorators.py  extensions.py  formatting.py  plotting.py
bot/bot/utils/dataframes/: __init__.py  image_generation.py  outliers.py  utils.py
bot/bot/utils/tests/: test_formatting.py
bot/bot/utils/tests/dataframes/: test_outliers.py
ordis/: __init__.py  __main__.py  bot.py
