[project]
dependencies = []
requires-python = ">=3.11"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/bot",
    "-e file:///${PROJECT_ROOT}/api",
    "ruff>=0.1.3",
    "pre-commit>=3.3.3",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
fmt = "ruff format ."
precommit = "pre-commit install"
