[project]
dependencies = []
requires-python = ">=3.11"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/api",
    "-e file:///${PROJECT_ROOT}/bot",
    "ruff>=0.2.1",
    "pre-commit>=3.6.0",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
fmt = "ruff format ."
precommit = "pre-commit install"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
