[project]
name = "ordis-api"
version = "0.1.0"
description = "API portion of Ordis"
authors = [{ name = "Xithrius", email = "xithrius@gmail.com" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn[standard]>=0.23.2",
    "gunicorn>=21.2.0",
    "sqlalchemy[asyncio]>=2.0.21",
    "asyncpg>=0.28.0",
    "alembic>=1.12.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "httpx>=0.24.1",
    "httptools>=0.6.0",
    "yarl>=1.9.2",
    "ujson>=5.8.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "prometheus-client>=0.17.1",
    "prometheus-fastapi-instrumentator>=6.1.0",
]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
lint-format = ["ruff>=0.1.8"]
precommit = ["pre-commit>=3.3.3"]
test = [
    "pytest>=7.4.0",
    "anyio>=3.7.1",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.0.1",
    "pytest-xdist>=3.3.1",
]

[tool.pdm.scripts]
start = "python3 -m app"
lint = "pre-commit run --all-files"
fmt = "ruff format ."
precommit = "pre-commit install"
migrate = "alembic revision --autogenerate -m"
upgrade = "alembic upgrade head"
test = "pytest"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
extend-exclude = [".cache"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN204",
    "ANN206",
    "ANN401",
    "B904",
    "C401",
    "C408",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "D214",
    "D215",
    "D301",
    "D400",
    "D401",
    "D402",
    "D404",
    "D405",
    "D406",
    "D407",
    "D408",
    "D409",
    "D410",
    "D411",
    "D412",
    "D413",
    "D414",
    "D416",
    "D417",
    "E731",
    "RET504",
    "RUF005",
    "S101",
    "S311",
    "SIM102",
    "SIM108",
]
line-length = 120
select = [
    "ANN",
    "B",
    "C4",
    "D",
    "DTZ",
    "E",
    "F",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TID",
    "UP",
    "W",
]
