[project]
name = "ordis-api"
version = "0.1.0"
description = "API portion of Ordis"
authors = [{ name = "Xithrius", email = "xithrius@gmail.com" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0.post1",
    "gunicorn==21.2.0",
    "sqlalchemy[asyncio]==2.0.25",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic==2.6.0",
    "pydantic-settings==2.1.0",
    "httpx==0.26.0",
    "httptools==0.6.1",
    "yarl==1.9.4",
    "ujson==5.9.0",
    "python-dotenv==1.0.1",
    "loguru==0.7.2",
    "prometheus-client==0.19.0",
    "prometheus-fastapi-instrumentator==6.1.0",
    "opentelemetry-api==1.18.0",
    "opentelemetry-sdk==1.18.0",
    "opentelemetry-exporter-otlp==1.18.0",
    "opentelemetry-instrumentation==0.39b0",
    "opentelemetry-instrumentation-fastapi==0.39b0",
    "opentelemetry-distro==0.39b0",
    "opentelemetry-instrumentation-logging==0.39b0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
precommit = ["pre-commit==3.6.0"]
test = [
    "pytest==8.0.0",
    "anyio==4.2.0",
    "pytest-cov==4.1.0",
    "pytest-env==1.1.3",
    "pytest-xdist==3.5.0",
    "psycopg2-binary==2.9.9",
    "testcontainers[postgres]==3.7.1",
]

[tool.pdm.scripts]
start = "python3 -m app"

# Linting and formatting
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

# Database migrating
migrate = "alembic revision --autogenerate -m"
upgrade = "alembic upgrade head"

# Testing
test = "python3 -m pytest --ff"
atest = "python3 -m pytest -n auto --ff"
vtest = "python3 -m pytest -vvv --ff"
retest = "python3 -m pytest --lf"
test-cov = "python3 -m pytest --cov=./ --cov-report=xml"
html = "coverage html"
report = "coverage report --sort=Cover"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
