[project]
name = "ordis-api"
version = "0.1.0"
description = "API portion of Ordis"
authors = [{ name = "Xithrius", email = "xithrius@gmail.com" }]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "httptools>=0.6.1",
    "yarl>=1.9.4",
    "ujson>=5.10.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "opentelemetry-instrumentation>=0.47b0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "opentelemetry-distro>=0.47b0",
    "opentelemetry-instrumentation-logging>=0.47b0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
precommit = [
    "pre-commit>=3.8.0",
]
test = [
    "pytest>=8.3.2",
    "anyio>=4.4.0",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.3",
    "pytest-xdist>=3.6.1",
    "psycopg>=3.2.1",
    "testcontainers[postgres]>=4.8.0",
    "gevent>=24.2.1",
]

[tool.pdm.scripts]
start = "python3 -m app"

# Linting and formatting
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

# Database migrating
history = "alembic history"
migrate = "alembic revision --autogenerate -m"
upgrade = "alembic upgrade head"
downgrade = "alembic downgrade"

# Testing
test = "pytest --ff"
atest = "pytest -n auto --ff"
vtest = "pytest -vvv --ff"
retest = "pytest --lf"

# Coverage
test-cov = "pytest --cov=./ --cov-report=xml"
html = "coverage html"
report = "coverage report --sort=Cover"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
]

[tool.coverage.run]
concurrency = ["gevent"]
omit = ["app/__main__.py", "app/gunicorn_runner.py", "app/logging.py"]
