[project]
name = "ordis-bot"
version = "0.1.0"
description = "Bot portion of Ordis"
authors = [{ name = "Xithrius", email = "xithrius@gmail.com" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "discord-py==2.3.2",
    "python-dotenv==1.0.1",
    "loguru==0.7.2",
    "httpx==0.26.0",
    "humanize==4.8.0",
    "rapidfuzz==3.4.0",
    "pydantic==2.6.0",
    "pandas==2.1.2",
    "seaborn[stats]==0.13.0",
    "Pillow==10.1.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
precommit = ["pre-commit==3.6.0"]
test = [
    "pytest==7.4.0",
    "anyio==3.7.1",
    "pytest-cov==4.1.0",
    "pytest-env==1.0.1",
    "pytest-xdist==3.3.1",
]

[tool.pdm.scripts]
start = "python3 -m bot"

# Linting and formatting
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

# Testing
test = "python3 -m pytest --ff"
retest = "python3 -m pytest --lf"
test-cov = "python3 -m pytest --cov=./ --cov-report=xml"
html = "coverage html"
report = "coverage report"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
