[project]
name = "ordis-bot"
version = "0.1.0"
description = "Bot portion of Ordis"
authors = [{ name = "Xithrius", email = "xithrius@gmail.com" }]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "discord-py>=2.4.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "humanize>=4.9.0",
    "rapidfuzz>=3.9.4",
    "pydantic>=2.8.2",
    "pandas>=2.2.2",
    "seaborn[stats]>=0.13.2",
    "Pillow>=10.4.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
precommit = [
    "pre-commit>=3.7.1",
]
test = [
    "pytest>=8.2.2",
    "anyio>=4.4.0",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.3",
    "pytest-xdist>=3.6.1",
]

[tool.pdm.scripts]
start = "python3 -m bot"

# Linting and formatting
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

# Testing
test = "pytest --ff"
atest = "pytest -n auto --ff"
vtest = "pytest -vvv --ff"
retest = "pytest --lf"
memtest = "pytest -ff --memray"

# Coverage
test-cov = "pytest --cov=./ --cov-report=xml"
html = "coverage html"
report = "coverage report"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
